hive-macro/tests/macro/hive_test/should_fail/function_return.rs
#[hive_macro::hive_test]
fn test_function() -> u8 {}

fn main() {}
